<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_white_corner_radius_6"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_unit_name"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_unit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_white_shape_border_red_corner_6"
            android:hint="@string/hint_unit_name"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="#8D6E63"
            android:textSize="12sp"
            tools:ignore="Autofill,TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_corner_radius_6"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/action_cancel"
                android:textColor="@color/textColorPrimary" />

            <TextView
                android:id="@+id/tv_dialog_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_green_corner_radius_6"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/action_add"
                android:textColor="#263238" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
