<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/define_dimen_16"
        android:background="@drawable/bg_white_corner_radius_6"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_16">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/feature_add_shoes"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_shoes_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_shape_border_red_corner_6"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:padding="@dimen/define_dimen_12"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16">

            <EditText
                android:id="@+id/edt_quantity"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_white_shape_border_red_corner_6"
                android:hint="@string/hint_quantity"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:padding="@dimen/define_dimen_12"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="#8D6E63"
                android:textSize="@dimen/text_size_small"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/tv_unit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/define_dimen_10"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16">

            <EditText
                android:id="@+id/edt_price"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_white_shape_border_red_corner_6"
                android:hint="@string/hint_price"
                android:inputType="number"
                android:padding="@dimen/define_dimen_12"
                android:textColor="@color/background_red"
                android:textColorHint="#8D6E63"
                android:textSize="@dimen/text_size_small"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/define_dimen_10"
                android:text="@string/label_currency"
                android:textColor="#D32F2F"
                android:textSize="@dimen/text_size_small"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/define_dimen_10"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_corner_radius_6"
                android:gravity="center"
                android:padding="@dimen/define_dimen_12"
                android:text="@string/action_cancel"
                android:textColor="@color/textColorPrimary" />

            <TextView
                android:id="@+id/tv_dialog_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_green_corner_radius_6"
                android:gravity="center"
                android:padding="@dimen/define_dimen_12"
                android:text="@string/action_ok"
                android:textColor="#263238" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
