<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/define_dimen_10"
    app:cardCornerRadius="@dimen/define_dimen_6">

    <RelativeLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/define_dimen_12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/define_dimen_5"
            android:layout_toStartOf="@+id/tv_detail"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_current_quantity"
                    android:textColor="@color/textColorSecondary"
                    android:layout_marginEnd="@dimen/define_dimen_5"
                    android:textSize="@dimen/text_size_small" />

                <TextView
                    android:id="@+id/tv_current_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/text_size_small" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="@dimen/define_dimen_80"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_white_corner_6_border_gray"
            android:gravity="center"
            android:padding="@dimen/define_dimen_5"
            android:text="@string/label_detail"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>