<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/redAccent"
    android:orientation="vertical"
    android:padding="@dimen/define_dimen_10"
    tools:context=".activity.UnitActivity">

    <RelativeLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_shape_border_red_corner_6">

        <EditText
            android:id="@+id/edt_search_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/white"
            android:hint="@string/hint_unit_name"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="@dimen/define_dimen_10"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="#757575"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/define_dimen_40"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/img_search"
            android:background="@color/purple_500" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_5"
            android:src="@drawable/ic_search_red"
            tools:ignore="ContentDescription" />
    </RelativeLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/layout_search"
        android:layout_marginTop="@dimen/define_dimen_16"
        android:layout_marginBottom="@dimen/define_dimen_16"
        android:background="@color/dividerColor" />

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_divider">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/define_dimen_5"
            android:layout_toStartOf="@+id/layout_delete_all"
            android:text="@string/feature_manage_unit"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/text_size_small" />

        <LinearLayout
            android:id="@+id/layout_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_all"
                android:textColor="#C62828"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/background_red" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_title"
        android:layout_marginTop="@dimen/define_dimen_5" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/orange"
        android:contentDescription="@string/app_name"
        android:src="@android:drawable/ic_input_add"
        tools:ignore="ImageContrastCheck" />
</RelativeLayout>